--- a/Galaxy-Elite-Development-Limited.html
+++ b/Galaxy-Elite-Development-Limited.html
@@ -299,12 +299,12 @@
                     <div class="service-content">
                         <h3>香港宅配与城市配送（人力外包支持）</h3>
                         <p>覆盖香港全境的最后一公里配送，我们同时提供配送团队的人力外包与管理，承担招聘、排班与现场督导，降低客户的用工与管理压力。</p>
-                        <p class="case"><strong>成功案例：</strong>支持某电商平台外包配送团队，负责排班与绩效管理后，退件率下降20%，配送满意度显著提升。</p>
+                        <p class="case"><strong>成功案例：</strong>为某TOP电商平台外包配备团队，负责排班与绩效及日常管理，配送满意度显著提升。</p>
                         <ul class="service-features">
-                            <li><i class="fas fa-check-circle"></i> 自提点</li>
-                            <li><i class="fas fa-check-circle"></i> XXXXX</li>
-                            <li><i class="fas fa-check-circle"></i> XXXXXXX</li>
-                            <li><i class="fas fa-check-circle"></i> XXXXXXX</li>
+                            <li><i class="fas fa-check-circle"></i> 快递配送上门 </li>
+                            <li><i class="fas fa-check-circle"></i> 实时在线客服</li>
+                            <li><i class="fas fa-check-circle"></i> 异常工单处理</li>
+                            <li><i class="fas fa-check-circle"></i> 优化配送策略</li>
                         </ul>
                         <a href="details/service-2.html" class="service-link">了解更多详情 <i class="fas fa-arrow-right"></i></a>
                     </div>
