--- a/Galaxy-Elite-Development-Limited.html
+++ b/Galaxy-Elite-Development-Limited.html
@@ -478,22 +478,7 @@
                 
                 <div class="advantage-card">
                     <div class="advantage-icon">
-                        <img class="card-img" src="assets/images/advantages/advantage-4.jpg" alt="合作" loading="lazy">
-                    </div>
-                    <h3>客户至上</h3>
-                    <p>以客户需求为中心，提供个性化解决方案和优质服务体验</p>
-                </div>
-
-                <div class="advantage-card">
-                    <div class="advantage-icon">
-                        <img class="card-img" src="assets/images/advantages/advantage-5.jpg" alt="合作" loading="lazy">
-                    </div>
-                    <h3>客户至上</h3>
-                    <p>以客户需求为中心，提供个性化解决方案和优质服务体验</p>
-                </div>
-                <div class="advantage-card">
-                    <div class="advantage-icon">
-                        <!-- 图已移除 -->
+                        <img class="card-img" src="assets/images/advantages/advantage-3.jpg" alt="合作" loading="lazy">
                     </div>
                     <h3>业务成熟</h3>
                     <p>司机团队经验丰富，能够快速适应各种运输KPI需求</p>
@@ -501,7 +486,7 @@
                 
                 <div class="advantage-card">
                     <div class="advantage-icon">
-                        <!-- 图已移除 -->
+                        <img class="card-img" src="assets/images/advantages/advantage-3.jpg" alt="合作" loading="lazy">
                     </div>
                     <h3>网络覆盖广</h3>
                     <p>覆盖香港、中国大陆及澳门的广泛服务网络</p>
@@ -522,7 +507,7 @@
     <section class="partners" id="partners">
         <div class="container">
             <div class="section-title">
-                <h2>合作厂商</h2>
+                <h2>合作伙伴</h2>
                 <p>我们与多家知名企业合作</p>
             </div>
 
